--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -27,7 +27,7 @@ pre, code {
 }
 #nav {
   margin-bottom: 3em;
-  padding-bottom: 0.5em;
+  padding: 0.5em 0;
   font-size: 1em;
   border-bottom: 2px solid $gray6;
   #logo {
