--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,7 @@
 <% @title = 'Welcome' %>
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class='row'>
+  <div class="small-12 columns">
+    <h1>Welcome#index</h1>
+    <p>Find me in app/views/welcome/index.html.erb</p>
+  </div>
+</div>
