adds a page of additional links

--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -26,7 +26,9 @@ pre, code {
   margin-top: 10px;
 }
 #nav {
-  margin-bottom: 3em;
+  font-family: "Libre Baskerville", serif;
+  position: relative;
+  margin-bottom: 2em;
   padding: 0.5em 0;
   font-size: 1em;
   border-bottom: 2px solid $gray6;
@@ -40,8 +42,8 @@ pre, code {
     }
   }
   #nav-links {
-    bottom: 0.5em;
-    right: 0.9375rem;
+    bottom: 0.75em;
+    right: 0rem;
     position: absolute;
     a {
       color: $gray6;
@@ -116,4 +118,5 @@ ul.unadorned {
 }
 .footer-image {
   width: 100%;
+  margin-top: 1em;
 }
