--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,8 @@
 <nav id="nav">
   <%= link_to image_tag('logo.png'), root_path, id: 'logo' %>
+  <div id='nav-links'>
+    <%= link_to 'portfolio', '#' %>
+    <%= link_to 'blog', '#' %>
+    <%= link_to 'additional', additional_path %>
+  </div>
 </nav>
