--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html lang='en'>
   <head>
     <title><%= @title || 'Tad Thorley' %></title>
+    <meta name="author" content="Tad Thorley">
     <%= csrf_meta_tags %>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.1/css/foundation.min.css" />
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,400italic|Source+Code+Pro|Libre+Baskerville' rel='stylesheet' type='text/css'>
